<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_product"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/image_fav_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:foreground="?attr/selectableItemBackground"
                />
            <ImageView
                android:id="@+id/image_product"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/med4"
                android:layout_below="@+id/image_fav_product"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_name_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_vitamins"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_below="@+id/image_product"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_pills_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pills_90"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_name_product"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_final_price_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_price"
                android:layout_margin="6dp"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_pills_product"/>
            <TextView
                android:id="@+id/tv_price_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_287"
                android:layout_margin="6dp"
                android:layout_below="@+id/tv_pills_product"
                android:layout_toEndOf="@+id/tv_final_price_product"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>