<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_9">
        <ImageView
            android:id="@+id/image_product_shop"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="6dp"
            android:src="@drawable/med4"/>
        <TextView
            android:id="@+id/tv_name_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_vitamins"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/image_product_shop"
            />
        <TextView
            android:id="@+id/tv_pills_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pills_90"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/image_product_shop"
            android:layout_below="@+id/tv_name_product_shop"
            />
        <ImageButton
            android:id="@+id/image_fav_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:foreground="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/tv_final_price_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_price"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/image_product_shop"
            android:layout_below="@+id/tv_pills_product_shop"/>
        <TextView
            android:id="@+id/tv_price_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_287"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/tv_final_price_product_shop"
            android:layout_below="@+id/tv_pills_product_shop"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_shop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_add_24_white"
            android:backgroundTint="@color/color_8"
            android:tint="@color/white"
            android:layout_margin="16dp"
            android:layout_below="@+id/image_fav_product_shop"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>