<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".medicine">

    <ImageButton
        android:id="@+id/image_btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_menu_48"
        android:background="@null"
        android:layout_margin="16dp"
        android:foreground="?attr/selectableItemBackground"
        />

    <ScrollView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/scroll_view_menu" android:layout_below="@+id/image_btn_menu">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_online_pharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/online_medicine"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <com.google.android.material.textfield.TextInputLayout android:id="@+id/text_input_layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/search_for_drugs"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_shop_by_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/shop_by_category"
                android:textColor="@color/black"/>
            <HorizontalScrollView
                android:id="@+id/horizontal_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <LinearLayout
                    android:id="@+id/linear_layout_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tv_popular_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/popular_products"
                android:textColor="@color/black"/>
            <HorizontalScrollView
                android:id="@+id/horizontal_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                >
                <LinearLayout
                    android:id="@+id/linear_layout_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>





        </LinearLayout>

    </ScrollView>





</RelativeLayout>